@@ -25,7 +25,7 @@
   name = "github.com/Scalingo/envconfig"
 
 [[constraint]]
-  version = "~1.3"
+  version = "~1.4"
   name = "github.com/Scalingo/go-scalingo"
 
 [[constraint]]
