@@ -3,11 +3,10 @@ package notifiers
 import (
 	"github.com/Scalingo/cli/config"
 	"github.com/Scalingo/cli/io"
-	scalingo "github.com/Scalingo/go-scalingo"
 	"gopkg.in/errgo.v1"
 )
 
-func Update(app, ID string, params scalingo.NotifierParams) error {
+func Update(app, ID string, params ProvisionParams) error {
 	if app == "" {
 		return errgo.New("no app defined")
 	}
@@ -26,7 +25,14 @@ func Update(app, ID string, params scalingo.NotifierParams) error {
 		}
 	}
 
-	baseNotifier, err := c.NotifierUpdate(app, ID, string(notifier.GetType()), params)
+	if len(params.CollaboratorUsernames) > 0 {
+		params.UserIDs, err = collaboratorUserIDs(app, params.CollaboratorUsernames)
+		if err != nil {
+			return errgo.Notef(err, "invalid collaborator usernames")
+		}
+	}
+
+	baseNotifier, err := c.NotifierUpdate(app, ID, string(notifier.GetType()), params.NotifierParams)
 	if err != nil {
 		return errgo.Notef(err, "fail to update notifier")
 	}
